@@ -1,3 +1,8 @@
+2006-03-27  Daniel Stone  <daniel@freedesktop.org>
+
+	* src/XKBui.c:
+	Eliminate use of _XkbStrCaseCmp.
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
